Fix: Regression testing for 0.4 release. (#348)
* Update type isCookieSet -> isBlocked inside cli dashboard

* fix:type and cookie affected value

* fix:affected cookies highlighting in cli dashboard

* Use extra condition to hide filters sidebar

* Always show chips bar

* Update filter icon disabling condition

* Add condition to change icon on unfocus

* Updat test

* Add priority and size filters

* Add comments

* Update url colors

* Dont show scrollbar

* Dont show scrollbar

* Update tailwind config

* Update app.css for dashboard with tailwind

* Remove blocked reason heading in dashboard

* Update sidebar focused condition

* Add storage update listener to auto select cookie tab when current tab unanalysed

* fix: rename cookie accepted to cookie affected

---------

--- a/packages/extension/src/view/devtools/app.css
+++ b/packages/extension/src/view/devtools/app.css
@@ -1,21 +1,18 @@
 @tailwind base;
-
+@tailwind components;
+@tailwind utilities;
 @layer utilities {
-  @variants responsive {
-    /* Hide scrollbar for Chrome, Safari and Opera */
-    .no-scrollbar::-webkit-scrollbar {
-      display: none;
-    }
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
   }
 }
 @layer base {
   body {
     @apply font-sans;
   }
-  :root{
+  :root {
     --color-message-box-dark: 33deg 14% 18%;
     --color-message-box-light: 30deg 100% 75%;
   }
 }
-@tailwind components;
-@tailwind utilities;
